--- a/chaturaji-android-app/res/values/strings.xml
+++ b/chaturaji-android-app/res/values/strings.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Hello Maven</string>
-    <string name="hello">Hello chaturaji-android-app!</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Chaturaji</string>
+    <string name="user_pass">Please enter your username and password:</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="signup">Sign Up</string>
+    <string name="forgot_password">Forgot your password?</string>
+    <string name="login">Login</string>
+
+
+    <color name="main_colour">#2E2E2E</color>
+    <color name="white">#FFFFFF</color>
 
 </resources>
