Have added the first draft of in game screen

--- a/chaturaji-android-app/res/values/strings.xml
+++ b/chaturaji-android-app/res/values/strings.xml
@@ -17,4 +17,9 @@
     <color name="white">#FFFFFF</color>
     <color name="grey">#222222</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="light_brown">#FCDCB6</color>
+    <color name="dark_brown">#B9663A</color>
+    <color name="darkest_brown">#501C1C</color>
+    <color name="gold">#FFCD34</color>
+
 </resources>
