Added movements for all the pieces as well as made the code more efficient

--- a/chaturaji-android-app/res/values/strings.xml
+++ b/chaturaji-android-app/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="knight">knight</string>
     <string name="elephant">elephant</string>
     <string name="king">king</string>
+    <string name="empty">empty</string>
 
 </resources>
