fixing multiple bugs causing the game to lock-up and added update password logic

--- a/chaturaji-android-app/res/values/strings.xml
+++ b/chaturaji-android-app/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="signup">Sign Up</string>
-    <string name="forgot_password">Forgot your password?</string>
+    <string name="update_password">Update Password</string>
     <string name="login">Login</string>
     <string name="chaturaji">Chaturaji</string>
     <string name="blue">Blue</string>
